--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - ./conf/catalina.policy:/usr/local/tomcat/conf/catalina.policy
       - ./conf/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml
     environment: TZ=Asia/Shanghai
-    ports: 30080:8080
+    ports:
+      - 30080:8080
     entrypoint: 
       - "catalina.sh"
       - "run"
